test: DisplayName 과 테스트 수정